# Synapse

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: Makefile  README.md  TESTING.md  check_docs_sync.py  generate_docs.py  update_docs_hook.py
docs/source/: conf.py  index.rst  modules.rst  sentinel.embeddings.rst  sentinel.io.rst  sentinel.rst
examples/: sentinel_against_hate.ipynb
examples/data/splc_extremist_files/: act-america.json  act-america.md  alex-jones.json  alex-jones.md  alex-linder.json  alex-linder.md  alliance-defending-freedom.json  alliance-defending-freedom.md  alt-right.json  alt-right.md  american-border-patrolamerican-patrol.json  american-border-patrolamerican-patrol.md  american-college-pediatricians.json  american-college-pediatricians.md  american-family-association.json  american-family-association.md  american-freedom-party.json  american-freedom-party.md  american-renaissance.json  american-renaissance.md  americas-promise-ministries.json  americas-promise-ministries.md  andrew-anglin.json  andrew-anglin.md  andrew-weev-auernheimer.json  andrew-weev-auernheimer.md  anti-immigrant.json  anti-immigrant.md  anti-lgbtq.json  anti-lgbtq.md  anti-muslim.json  anti-muslim.md  antigovernment-general.json  antigovernment-general.md  antisemitism.json  antisemitism.md  april-gaede.json  april-gaede.md  arthur-jensen.json  arthur-jensen.md  (+458 more)
examples/hate_speech_model/: embeddings.safetensors  sentinel_local_index_config.json
examples/scripts/: fetch-neutral-examples-data.py  fetch_splc_extremist_files.py
src/sentinel/: __init__.py  score_formulae.py  score_types.py  sentinel_local_index.py
src/sentinel/embeddings/: __init__.py  sbert.py
src/sentinel/io/: __init__.py  index_io.py  saved_index_config.py
tests/: __init__.py  conftest.py  test_embeddings.py  test_io.py  test_score_formulae.py  test_score_types.py  test_sriracha_local_index.py
